--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gh-pages": "^4.0.0"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "crypto-js": "^4.1.1"
   }
 }
